--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                   </svg>
                 </div>
                 <div id="ok-zoomer">
-                  <a class="zoom-in" onclick="toggleZoom()" href="javascript:;">Yakınlaş</a>
-                  <a class="zoom-out" onclick="toggleZoom()" href="javascript:;">Uzaklaş</a>
+                  <a class="zoom-in" onclick="toggleZoom()" href="javascript:;">Yakınlaştır</a>
+                  <a class="zoom-out" onclick="toggleZoom()" href="javascript:;">Uzaklaştır</a>
                 </div>
               </div>
             </div>
